--- a/src/components/Funnel3D.css
+++ b/src/components/Funnel3D.css
@@ -129,12 +129,12 @@
 
 @media (max-width: 768px) {
   .funnel-3d-container {
-    padding: 5px 7px 20px 7px;
+    padding: 5px 7px 60px 7px;
     gap: 5px;
     width: 100%;
     min-height: 100%;
     box-sizing: border-box;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
   }
 
   .funnel-3d-wrapper {
@@ -219,10 +219,10 @@
 
 @media (max-width: 480px) {
   .funnel-3d-container {
-    padding: 5px 7px 20px 7px;
+    padding: 5px 7px 60px 7px;
     width: 100%;
     min-height: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
   }
 
   .funnel-3d-wrapper {
